eks/elb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks1-ingress
  namespace: dev
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: eks1-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/address: eks1-alb-1349408432.ap-southeast-2.elb.amazonaws.com
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
